[package]
name = "sparkpass"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

[dependencies]
openssl = "0.10.22"
base64 = "0.10.1"
argparse = "0.2.2"
shellexpand = "1.0.0"
csv = "1"
levenshtein = "1.0.4"
rpassword = "3.0.2"
url = "1.7.2"
dbus = "0.6.4"
